--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
 
   <div>
+    <h1>ToDo Shopping List </h1>
     <input type="text" id="add-task-input" placeholder="Add a new task">
     <button id="add-task-button">Add Task</button>
   </div>
